5. Startup parameters validation.